<resources>
    <string name="app_name">Vacation Tracker</string>
    <string name="vacations">Vacations</string>
    <string name="bucket_list">Bucket List</string>
    <string name="new_vacation">Add a New Vacation</string>
    <string name="new_bucket_list">Add a New Bucket List</string>



    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblTripName">Trip Name</string>
    <string name="lblTitle" />
    <string name="lblDescription">Description</string>
    <string name="lblDate">Date</string>
    <string name="lblStartDate">Start Date:</string>
    <string name="lblEndDate">End Date:</string>
    <string name="lblLongitude">Longitude</string>
    <string name="lblLatitude">Latitude</string>
    <string name="lblZero">0.0</string>
    <string name="lblPauseGPS">Pause GPS</string>
    <string name="lblResumeGPS">Resume GPS</string>
    <string name="lblConfirm">Confirm</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblNewVacationButton">New Vacation</string>
    <string name="lblNewBucketList">New Bucket List</string>
    <string name="lblCity">City</string>
    <string name="lblState">State</string>
    <string name="lblCountry">Country</string>
    <string name="choosePhoto">Choose Photo</string>
</resources>
