<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NewVacation">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCancel"
            android:id="@+id/btnCancelBucket"
            android:layout_weight="1"
            android:onClick="btnCancelClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConfirm"
            android:id="@+id/btnConfirmBucket"
            android:onClick="btnAddBucketConfirm"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTripName"
        android:hint="@string/lblTripName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="20" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescription"
        android:hint="@string/lblDescription"
        android:layout_below="@+id/txtTripName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="3" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCity"
        android:layout_below="@+id/txtDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/lblCity"
        android:maxLength="20" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtState"
        android:hint="@string/lblState"
        android:layout_below="@+id/txtCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="20" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCountry"
        android:hint="@string/lblCountry"
        android:layout_below="@+id/txtState"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="20" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosePhoto"
        android:id="@+id/choosePhotoBtn"
        android:layout_below="@+id/txtCountry"
        android:layout_alignRight="@+id/txtCountry"
        android:layout_alignEnd="@+id/txtCountry"
        android:layout_marginTop="85dp"
        android:onClick="btnChoosePhotoClicked" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgPicture"
        android:layout_above="@+id/linearLayout"
        android:layout_toLeftOf="@+id/choosePhotoBtn"
        android:layout_below="@+id/txtCountry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>